// Copyright 2014-2015 The Dename Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not
// use this file except in compliance with the License. You may obtain a copy of
// the License at
//
// 	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
// License for the specific language governing permissions and limitations under
// the License.

syntax = "proto3";
package proto;
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "tlsconfig.proto";
import "client.proto";

message VerifierConfig {
	uint64 id = 1 [(gogoproto.customname) = "ID"];
	string signing_key_id = 2 [(gogoproto.customname) = "SigningKeyID"];

	string realm = 3;
	TLSConfig tls = 4 [(gogoproto.customname) = "TLS"];
	string keyserver_addr = 5;
	AuthorizationPolicy initial_keyserver_auth = 6 [(gogoproto.nullable) = false];

	bytes tree_nonce = 7;
	// LevelDBPath specifies the directory in which the database is stored.
	// Nothing else should use this directory.
	string leveldb_path = 8 [(gogoproto.customname) = "LevelDBPath"];
}
